# vcpkg_test

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/curl/: CMakeLists.txt  curl_main.cpp
src/pplx/: CMakeLists.txt  pplx_task.hpp  pplx_task_test.cpp
